<resources>
    <string name="app_name">Lab03</string>
    <string name="text_Register">Register</string>
    <string name="edit_Name">Name</string>
    <string name="edit_Email">E-mail</string>
    <string name="edit_Phone">Phone</string>
    <string name="edit_Pass">Password</string>
    <string name="edit_Password">Re-Type Password</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_Cancel">Cancel</string>
</resources>